gitops/app-configs/firefly-iii.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: firefly-ingress
  namespace: firefly-iii
  annotations:
    kubernetes.io/ingress.class: traefik-external
    # argocd.argoproj.io/hook: Sync
    helm.sh/hook: "post-install"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`firefly.local.timmybtech.com`)
      kind: Rule
      services:
        - name: firefly-iii
          port: 80
  tls:
    secretName: local-timmybtech-com-tls # or local-example-com-staging-tls
